# prospect

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/: barebones.rs  framebuffer_test.rs  hello_world.rs  pong.rs  test.rs
examples/obj_realtime_updater/: Cargo.toml
examples/obj_realtime_updater/src/: main.rs
examples/simple_terrain_gen/: Cargo.toml
examples/simple_terrain_gen/src/: chunk.rs  main.rs
examples/voxel_engine/: Cargo.toml
examples/voxel_engine/src/: chunk.rs  lib.rs  main.rs  player.rs  vec_extension.rs  voxel_shader.rs
examples/voxel_engine/src/shader/: voxel_shader.wgsl
res/: light.mtl
src/: lib.rs  model.rs  prospect_app.rs  prospect_camera.rs  prospect_camera_controller.rs  prospect_framebuffer.rs  prospect_light.rs  prospect_shader_manager.rs  prospect_shape.rs  prospect_texture.rs  prospect_transform.rs  render_pipeline_index.rs
src/abstraction/: graphics_context.rs  high_level_abstraction.rs  mesh.rs  mod.rs  prospect_window.rs  shader.rs  vertex.rs  window.rs
src/shaders/: default_3d.rs  default_3d.wgsl  material.rs  mod.rs  shader.wgsl  smart3d.rs  textured_shader.rs  textured_shader.wgsl
src/smart/: mod.rs  smart_bind_group.rs  smart_model.rs  smart_render_pipeline.rs  smart_shader.rs
src/utils/: mod.rs
src/utils/prospect_fs/: mod.rs  path.rs  read.rs
