[package]
name = "prospect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.0"
image = {version = "0.24.7", default-features = false, features = ["png", "jpeg"]}
log = "0.4.20"
pollster = "0.3.0"
prospect-obj = { git = "https://github.com/Zycrasion/prospect-obj", version = "0.1.0" }
vecto-rs = { git = "https://github.com/Zycrasion/vecto-rs", version = "1.1.9" }
wgpu = "0.17.1"
winit = "0.28.7"

[profile.dev.package."*"]
opt-level = 3
